@@ -2,7 +2,7 @@ package br.senai.sc.communitex.service.impl;
 
 import br.senai.sc.communitex.dto.PessoaFisicaRequestDTO;
 import br.senai.sc.communitex.dto.PessoaFisicaResponseDTO;
-import br.senai.sc.communitex.exception.BusinessExpection;
+import br.senai.sc.communitex.exception.BusinessException;
 import br.senai.sc.communitex.exception.ForbiddenException;
 import br.senai.sc.communitex.exception.ResourceNotFoundException;
 import br.senai.sc.communitex.model.PessoaFisica;
@@ -10,116 +10,131 @@ import br.senai.sc.communitex.model.Usuario;
 import br.senai.sc.communitex.repository.PessoaFisicaRepository;
 import br.senai.sc.communitex.service.PessoaFisicaService;
 import br.senai.sc.communitex.service.UsuarioService;
-import org.springframework.beans.BeanUtils;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class PessoaFisicaServiceImpl implements PessoaFisicaService {
 
     private final PessoaFisicaRepository pessoaFisicaRepository;
     private final UsuarioService usuarioService;
     private final PasswordEncoder passwordEncoder;
 
-    public PessoaFisicaServiceImpl(PessoaFisicaRepository pessoaFisicaRepository,
-                                   UsuarioService usuarioService,
-                                   PasswordEncoder passwordEncoder) {
-        this.pessoaFisicaRepository = pessoaFisicaRepository;
-        this.usuarioService = usuarioService;
-        this.passwordEncoder = passwordEncoder;
-    }
-
     @Override
+    @Transactional(readOnly = true)
     public PessoaFisica findByUsuarioUsername(String username) {
         return pessoaFisicaRepository.findByUsuarioUsername(username)
                 .orElseThrow(() -> new ForbiddenException(
                         "Nenhuma pessoa física associada ao usuário: " + username));
     }
 
+    @Override
+    @Transactional(readOnly = true)
     public List<PessoaFisicaResponseDTO> findAll() {
         return pessoaFisicaRepository.findAll().stream()
                 .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Override
+    @Transactional(readOnly = true)
     public PessoaFisicaResponseDTO findById(Long id) {
         return pessoaFisicaRepository.findById(id)
                 .map(this::toResponseDTO)
                 .orElseThrow(() -> new ResourceNotFoundException("Pessoa Física não encontrada com ID: " + id));
     }
 
+    @Override
     @Transactional
     public PessoaFisicaResponseDTO create(PessoaFisicaRequestDTO dto) {
-        Optional<PessoaFisica> existenteByCpf = pessoaFisicaRepository.findByCpf(dto.cpf());
-        if (existenteByCpf.isPresent()) {
-            throw new BusinessExpection("Já existe uma pessoa cadastrada com o CPF: " + dto.cpf());
-        }
+        validarDuplicidadeCpf(dto.cpf(), null);
+        validarDuplicidadeEmail(dto.email(), null);
 
-        Optional<PessoaFisica> existenteByEmail = pessoaFisicaRepository.findByEmail(dto.email());
-        if (existenteByEmail.isPresent()) {
-            throw new BusinessExpection("Já existe uma pessoa cadastrada com o email: " + dto.email());
-        }
+        usuarioService.findByUsername(dto.email())
+                .ifPresent(existing -> {
+                    throw new BusinessException("Já existe um usuário cadastrado com o email: " + dto.email());
+                });
 
-        Optional<Usuario> usuarioExistente = usuarioService.findByUsername(dto.email());
-        if (usuarioExistente.isPresent()) {
-            throw new BusinessExpection("Já existe um usuário cadastrado com o email: " + dto.email());
-        }
+        var usuario = Usuario.builder()
+                .username(dto.email())
+                .password(passwordEncoder.encode(dto.senha()))
+                .role("ROLE_USER")
+                .nome(dto.nome())
+                .build();
+        var usuarioSalvo = usuarioService.save(usuario);
 
-        Usuario usuario = new Usuario();
-        usuario.setUsername(dto.email());
-        usuario.setPassword(passwordEncoder.encode(dto.senha()));
-        usuario.setRole("ROLE_USER");
-        usuario.setNome(dto.nome());
-        Usuario usuarioSalvo = usuarioService.save(usuario);
+        var pessoaFisica = PessoaFisica.builder()
+                .nome(dto.nome())
+                .cpf(sanitizarNumeros(dto.cpf()))
+                .email(dto.email())
+                .telefone(sanitizarNumeros(dto.telefone()))
+                .usuario(usuarioSalvo)
+                .build();
 
-        PessoaFisica pessoaFisica = new PessoaFisica();
-        BeanUtils.copyProperties(dto, pessoaFisica, "usuario", "senha");
-        pessoaFisica.setCpf(dto.cpf().replaceAll("\\D", ""));
-        if (dto.telefone() != null && !dto.telefone().isEmpty()) {
-            pessoaFisica.setTelefone(dto.telefone().replaceAll("\\D", ""));
-        }
-        pessoaFisica.setUsuario(usuarioSalvo);
-
-        return toResponseDTO(pessoaFisicaRepository.save(pessoaFisica));
+        var saved = pessoaFisicaRepository.save(pessoaFisica);
+        log.info("Pessoa Física criada com ID: {}", saved.getId());
+        return toResponseDTO(saved);
     }
 
+    @Override
+    @Transactional
     public PessoaFisicaResponseDTO update(Long id, PessoaFisicaRequestDTO dto) {
-        PessoaFisica pessoaFisica = pessoaFisicaRepository.findById(id)
+        var pessoaFisica = pessoaFisicaRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Pessoa Física não encontrada com ID: " + id));
 
         if (!pessoaFisica.getCpf().equals(dto.cpf())) {
-            Optional<PessoaFisica> existenteByCpf = pessoaFisicaRepository.findByCpf(dto.cpf());
-            if (existenteByCpf.isPresent()) {
-                throw new BusinessExpection("Já existe uma pessoa cadastrada com o CPF: " + dto.cpf());
-            }
+            validarDuplicidadeCpf(dto.cpf(), id);
         }
 
         if (!pessoaFisica.getEmail().equals(dto.email())) {
-            Optional<PessoaFisica> existenteByEmail = pessoaFisicaRepository.findByEmail(dto.email());
-            if (existenteByEmail.isPresent()) {
-                throw new BusinessExpection("Já existe uma pessoa cadastrada com o email: " + dto.email());
-            }
+            validarDuplicidadeEmail(dto.email(), id);
         }
 
-        BeanUtils.copyProperties(dto, pessoaFisica, "id", "usuario", "senha");
-        pessoaFisica.setCpf(dto.cpf().replaceAll("\\D", ""));
-        if (dto.telefone() != null && !dto.telefone().isEmpty()) {
-            pessoaFisica.setTelefone(dto.telefone().replaceAll("\\D", ""));
-        }
+        pessoaFisica.setNome(dto.nome());
+        pessoaFisica.setCpf(sanitizarNumeros(dto.cpf()));
+        pessoaFisica.setEmail(dto.email());
+        pessoaFisica.setTelefone(sanitizarNumeros(dto.telefone()));
 
+        log.info("Pessoa Física ID: {} atualizada", id);
         return toResponseDTO(pessoaFisicaRepository.save(pessoaFisica));
     }
 
+    @Override
+    @Transactional
     public void delete(Long id) {
         if (!pessoaFisicaRepository.existsById(id)) {
             throw new ResourceNotFoundException("Pessoa Física não encontrada com ID: " + id);
         }
         pessoaFisicaRepository.deleteById(id);
+        log.info("Pessoa Física ID: {} excluída", id);
+    }
+
+
+    private void validarDuplicidadeCpf(String cpf, Long idIgnorar) {
+        pessoaFisicaRepository.findByCpf(cpf)
+                .filter(existing -> idIgnorar == null || !existing.getId().equals(idIgnorar))
+                .ifPresent(existing -> {
+                    throw new BusinessException("Já existe uma pessoa cadastrada com o CPF: " + cpf);
+                });
+    }
+
+    private void validarDuplicidadeEmail(String email, Long idIgnorar) {
+        pessoaFisicaRepository.findByEmail(email)
+                .filter(existing -> idIgnorar == null || !existing.getId().equals(idIgnorar))
+                .ifPresent(existing -> {
+                    throw new BusinessException("Já existe uma pessoa cadastrada com o email: " + email);
+                });
+    }
+
+    private String sanitizarNumeros(String valor) {
+        return valor != null && !valor.isEmpty() ? valor.replaceAll("\\D", "") : null;
     }
 
     private PessoaFisicaResponseDTO toResponseDTO(PessoaFisica pessoaFisica) {
@@ -132,4 +147,3 @@ public class PessoaFisicaServiceImpl implements PessoaFisicaService {
         );
     }
 }
-
